<resources>
    <string name="app_name">MyApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>

    <!--SignUp Activity-->
    <string name="signup">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <!--LoginActivity-->
    <string name="register_option">Not Registered?  Register Now</string>
    <string name="ratings_reviews"><![CDATA[50 ratings & 15 reviews]]></string>
    <string name="share">Share</string>
    <string name="wishlist">Wishlist</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="seller">Seller</string>
    <string name="details">Details</string>
    <string name="free_delivery">FREE Delivery</string>
    <string name="print_order">Print Order</string>
    <string name="print_online">Print Online</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="place_order">Place Order</string>
</resources>
