<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        tools:ignore="ScrollViewSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="#f48342"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:background="@drawable/customized_box"
            android:fontFamily="monospace"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:background="@drawable/customized_box"
            android:fontFamily="monospace"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:background="@drawable/customized_box"
            android:fontFamily="monospace"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:background="@drawable/customized_box"
            android:fontFamily="monospace"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:background="@drawable/customized_box"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#f48342"
            android:fontFamily="serif-monospace"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="15sp"
            />
    </LinearLayout>
</ScrollView>
