<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#1E88E5"
            android:text="Login"
            android:textColor="#FAFAFA"
            android:textStyle="bold"
            android:typeface="monospace"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/login_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:fontFamily="monospace"
            android:text="@string/register_option"
            android:textColor="#212121"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:background="#1E88E5"
            android:text="Register"
            android:textColor="#FAFAFA"
            android:textStyle="bold"
            android:typeface="monospace"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>
