<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aid_activity_item_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activities.ItemDetailsActivity">

    <ScrollView
        android:id="@+id/aid_scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none">

        <!--android:paddingLeft="8dp"-->
        <!--android:paddingRight="8dp"-->
        <!--android:paddingTop="8dp"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/aid_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="2dp"
              />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aid_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/gen_black"
                    android:textSize="24sp"
                    tools:text="Product" />

                <TextView
                    android:id="@+id/aid_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/gen_black"
                    android:textSize="20sp"
                    tools:text="Rs. 1,979" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/free_delivery"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/aid_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@color/green_light"
                    android:paddingBottom="2dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingTop="2dp"
                    android:textColor="@color/gen_white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="4.3 *" />

                <TextView
                    android:id="@+id/aid_seller_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/gen_black"
                    android:textSize="16sp"
                    tools:text="@string/seller" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/aid_layout_action1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_share" />

                    <TextView
                        android:id="@+id/aid_text_action1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/share"
                        android:textColor="@color/gen_black"
                        android:textSize="12sp"
                        tools:ignore="NestedWeights" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light" />

                <LinearLayout
                    android:id="@+id/aid_layout_action3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/aid_wishlist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#FF1010"
                        android:src="@drawable/ic_action_fav_bdr" />

                    <TextView
                        android:id="@+id/aid_text_action3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/wishlist"
                        android:textColor="@color/gen_black"
                        android:textSize="12sp"
                        tools:ignore="NestedWeights" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/details"
                    android:textColor="@color/gen_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/aid_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="\u2022 Description"
                    android:textColor="@color/gen_black"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@color/gen_black"
        android:elevation="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/text_action_bottom1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gen_white"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:textColor="@color/gen_black"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/text_action_bottom2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="@color/gen_white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
